name:                parser
version:             0.1
synopsis:            parsing
description:         A simple Parser combinator library written in Haskell
homepage:            https://github.com/tholzschuh/parser
license:             BEERWARE
license-file:        LICENSE
author:              Tim Holzschuh
maintainer:          TimHolzschuh@gmx.de        
build-type:          Simple
cabal-version:       >=1.10

executable parser
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
